--- a/index.html
+++ b/index.html
@@ -2,35 +2,124 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Регистрация на турнир</title>
+  <title>Турнирная регистрация</title>
   <style>
-    body { font-family: sans-serif; background: #111; color: white; text-align: center; padding: 50px; }
-    input { padding: 10px; font-size: 16px; width: 250px; }
-    button { padding: 10px 20px; font-size: 16px; margin-top: 10px; cursor: pointer; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 30px;
+    }
+    h1 {
+      text-align: center;
+      color: #222;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    }
+    input, textarea, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+    button {
+      background: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+    button:hover {
+      background: #45a049;
+    }
+    .info {
+      background: #e9f5e9;
+      padding: 10px;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>Регистрация на турнир</h1>
-  <input type="tel" id="phone" placeholder="Введите номер телефона"><br>
-  <button onclick="register()">Зарегистрироваться</button>
-  <p id="status"></p>
+  <div class="container">
+    <h1>Регистрация на турнир</h1>
+    <div class="info">
+      Участие команды (5 человек) стоит 250 руб. По 50 руб. за каждого.  
+      Оплатите, затем введите код и заполните данные.
+    </div>
+
+    <button onclick="showForm()">Участвовать в турнире</button>
+
+    <div id="formSection" style="display:none;">
+      <input type="text" id="teamName" placeholder="Название команды" required>
+      <input type="text" id="captain" placeholder="Капитан команды" required>
+      <input type="text" id="player1" placeholder="Игрок 1" required>
+      <input type="text" id="player2" placeholder="Игрок 2" required>
+      <input type="text" id="player3" placeholder="Игрок 3" required>
+      <input type="text" id="player4" placeholder="Игрок 4" required>
+      <input type="text" id="paymentCode" placeholder="Код оплаты" required>
+      
+      <textarea id="rules" readonly rows="4">
+        Обязательное условие: соблюдать правила турнира, быть вовремя и уважать других участников.
+      </textarea>
+
+      <label>
+        <input type="checkbox" id="agreeRules"> Я прочитал правила
+      </label>
+
+      <button onclick="submitForm()">Подать заявку</button>
+    </div>
+  </div>
 
   <script>
-    async function register() {
-      const phone = document.getElementById("phone").value.trim();
-      if (!phone) {
-        document.getElementById("status").innerText = "Введите номер.";
+    function showForm() {
+      document.getElementById('formSection').style.display = 'block';
+    }
+
+    function submitForm() {
+      const teamName = document.getElementById("teamName").value;
+      const captain = document.getElementById("captain").value;
+      const players = [
+        captain,
+        document.getElementById("player1").value,
+        document.getElementById("player2").value,
+        document.getElementById("player3").value,
+        document.getElementById("player4").value,
+      ];
+      const paymentCode = document.getElementById("paymentCode").value;
+      const agree = document.getElementById("agreeRules").checked;
+
+      if (!agree) {
+        alert("Вы должны прочитать и согласиться с правилами.");
         return;
       }
 
-      const res = await fetch('https://ТВОЙ_СЕРВЕР/api/register', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ phone })
-      });
+      const payload = {
+        team_name: teamName,
+        captain: captain,
+        players: players,
+        payment_code: paymentCode
+      };
 
-      const data = await res.text();
-      document.getElementById("status").innerText = data;
+      fetch('http://localhost:5000/register', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(payload)
+      })
+      .then(res => res.json())
+      .then(data => {
+        alert(data.message);
+      })
+      .catch(err => {
+        alert("Ошибка отправки данных");
+      });
     }
   </script>
 </body>
