--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="icon" href="file_00000000a070620aaadcc380f5d96f5a.png" type="image/png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow">
@@ -61,7 +62,7 @@
   <h1>Добро пожаловать на Standoff Турниры!</h1>
   <p>Участвуй в турнирах по Standoff 2, выигрывай призы и докажи, что ты лучший!</p>
 
-  <a class="btn" href="https://your-tournament-url.loca.lt" target="_blank">
+  <a class="btn" href="https://shaky-islands-sort.loca.lt" target="_blank">
     Перейти к турнирам
   </a>
 
