🔄 Auto-update link in HTML

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h1>Добро пожаловать на Standoff Турниры!</h1>
   <p>Участвуй в турнирах по Standoff 2, выигрывай призы и докажи, что ты лучший!</p>
 
-<a class="btn" href="https://mighty-ties-dress.loca.lt" target="_blank">
+<a class="btn" href="https://tender-signs-throw.loca.lt" target="_blank">
     Перейти к турнирам
   </a>
 
