--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <meta http-equiv="refresh" content="0; url=http://77.105.144.92:8000/">
+
   <link rel="icon" href="file_00000000a070620aaadcc380f5d96f5a.png" type="image/png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
